chore[favicon]: consume new favicon feat[html]: add new 403.html file refact[nginx]: update default.conf to handle assets, favicon, and 403.html

--- a/html/403.html
+++ b/html/403.html
@@ -25,6 +25,6 @@
     <title>hmm...</title>
   </head>
   <body>
-    Yo Dumbass, you ain't gonna find anything here!!!
+    YOU SHALL NOT PASS!!!
   </body>
 </html>
